demo/auth-server-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-nodeport-service
spec:
  selector:
    app: authorization-server
  type: NodePort
  ports:
  - name: http
    port: 9191
    targetPort: 9191
    nodePort: 30037
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-server
spec:
  selector:
    matchLabels:
      app: authorization-server
  replicas: 1
  template:
    metadata:
      labels:
        app: authorization-server
    spec:
      containers:
        - name: authorization-server
          image: hashanr/auth-server:1.1.0 
          ports:
            - containerPort: 9191
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-conf  # name of configMap
                  key: host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-conf
                  key: name
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom:
                secretKeyRef:
                  name: db-credentials # Secret Name
                  key: username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef:
                  name: db-credentials
                  key: password
