demo/mobile-info-backend-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: mobile-info-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: mobile-info-backend
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-info-backend
spec:
  selector:
    matchLabels:
      app: mobile-info-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: mobile-info-backend
    spec:
      containers:
        - name: mobile-info-backend
          image: hashanr/mobile-info-backend:1.0.2
          ports:
            - containerPort: 8080
          env:   # Setting Enviornmental Variables
            - name: DB_HOST   # Setting Database host address from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-conf  # name of configMap
                  key: host
            - name: DB_NAME  # Setting Database name from configMap
              valueFrom:
                configMapKeyRef:
                  name: db-conf
                  key: subsdb
            - name: DB_USERNAME  # Setting Database username from Secret
              valueFrom:
                secretKeyRef:
                  name: db-credentials # Secret Name
                  key: username
            - name: DB_PASSWORD # Setting Database password from Secret
              valueFrom:
                secretKeyRef:
                  name: db-root-credentials
                  key: password
            - name: AUTH_SERVER
              valueFrom:
                configMapKeyRef:
                  name: service-conf
                  key: authhostinternal
