demo/ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: ngnix-ingress
spec:
  backend:
    serviceName: frontend-nodeport-service 
    servicePort: 8090
